<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/depo_text">

        <menu>

            <item
                android:id="@+id/home_nav_menu_sayimRaporlama"
                android:icon="@drawable/ic_assignment"
                android:title="@string/sayimRapor_text" />

            <item
                android:id="@+id/home_nav_menu_stokSorgulama"
                android:icon="@drawable/ic_sorgu"
                android:title="@string/stokSorgu_text" />

        </menu>

    </item>

    <item
        android:id="@+id/home_nav_menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings_text" />

    <item
        android:id="@+id/home_nav_menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout_text" />

</menu>