<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/settings_text">

        <ListPreference
            android:key="theme"
            android:title="@string/theme_text"
            android:entries="@array/theme_settings"
            android:defaultValue="0"
            android:entryValues="@array/theme_settings_values"/>

        <ListPreference
            android:key="text_size"
            android:title="@string/text_size_text"
            android:entries="@array/text_size_settings"
            android:defaultValue="0"
            android:entryValues="@array/text_size_settings"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_text">

        <Preference
            android:key="developer"
            android:title="Geliştirici"
            android:summary="Mahmut Alperen Ünal"
            app:singleLineTitle="true"
            android:focusable="false">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/mahmutaunal" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>