<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/sayim_item_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sayim_item_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:layout_marginEnd="10dp"
        android:clickable="false"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sayim_item_linearLayout" />

    <LinearLayout
        android:id="@+id/sayim_item_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/sayim_item_checkBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/sayimNo_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_sayimNo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/barcodeID_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_materialBarcode_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/lotBatchNo_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_lotBatchNo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/configuraitonNo_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_configurationNo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/serialNo_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_serialNo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/locationID_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_locationBarcode_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/amount_text"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sayim_item_amountNo_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/number_text"
                android:textColor="?android:attr/textColorPrimary" />

        </LinearLayout>

        <TextView
            android:id="@+id/sayim_item_date_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/date_text"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/divider_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>